--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+spring.profiles.active=dev
 spring.application.name=proj-aui-ispg-25
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
@@ -6,6 +8,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:h2:mem:dearme
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
 
-server.error.include-message=always
+server.error.include-message=never
+
+logging.level.org.springframework.security=TRACE
